-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1034 2011-05-19 00:45:38 remko Exp $
-----------------------------------------------------------------------------------------

2011-05-19	remko
	* pslib.c, pslib_f77.c:	Split off Fortran bindings

2011-05-18	remko
	* *.tex:		Removed .gmt_bb_info; replaced {\it} by \emph{} and {\bf} by \textbf{}.
	* gmt_init.c:		Two routines GMT_parse_[X|Y]_option replaced by single GMT_parse_XY_option.
				-X and -Y option now support modifiers a|c|f|r, treated separately!
	* explain_-XY*.text:	---"---
	* test/psbasemap/origin.sh:	Test new -X and -Y functionality.
	* *.sh, *.bat:		Replaced -B0 with -B/ and -B0g<value> with -Bg<value>.
	* pslib.h:		Removed EPS struct.
	* pslib.c, gmt_plot.c:		PSL_beginplot now has title and font_no arguments (Fortran too) instead of eps.
	* configure.ac, website/*:	Removed --enable-eps setting.
	* gmt_defaults.h, gmt.conf.in:	Removed PS_EPS setting.
	* functions.sh, gmt_init.c:	---"---
	* gmt_keywords.txt:	Moved PS_EPS and PS_COPIES to gmt_keywords.d

2011-05-18	jluis
	* psimage_func.c:	Now is able to plot also indexed images imported via GDAL

2011-05-17	pwessel
	* grdcontour_func.c:	New contour label modifier +t|T[<file>] to save label locations to file.
	* pscontour_func.c:	---"---
	* psxy_func.c:		New quoted line label modifier +t|T[<file>] to save label locations to file.
	* psxyz_func.c:		---"---
				This feature can be used to plot contours or quoted lines in KML with
				annotation labels via gmt2kml.
	* gmt2kml_func.c:	Use -I- to turn symbol plotting off (just plot label).

2011-05-17	remko
	* pslib.*:		Changed PSL_beginplot to no longer mention "absolute" positioning,
				but use "origin" to specify the origin of the offset ('r', 'a',
				'f', 'c') for each direction.
2011-05-16	remko
	* pslib.*:		Adjusted description of PSL_beginplot argument "absolute" so it conforms
				to the actual workings (reset moved at end).